--- a/site/public/style/style.css
+++ b/site/public/style/style.css
@@ -1,64 +1,77 @@
-@import url('https://fonts.cdnfonts.com/css/marvel');
+@import url('https://fonts.googleapis.com/css2?family=Marvel&display=swap');
 
 * {
     margin: 0;
-    font-family: 'Marvel', sans-serif;
 }
 
-header {
-    display: flex;
+html {
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+
+body {
+    font-family: 'Marvel', sans-serif;
+    background: url(../assets/img/backgrounds/marvelBackground-1.svg);
 }
 
 .navbar {
-    position: fixed;
+    position: relative;
     top: 0;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     width: 100%;
-    box-sizing: border-box;
-    padding: 2% 4%;
-    z-index: 2;
-    background-color: #E23636;
+    
 }
 
-.navbar ul {
+nav{
+    padding: 2vh;
+}
+
+.navbar ul{
     display: flex;
     align-items: center;
-    gap: 50px;
+    gap: 20px;
     list-style: none;
-    text-decoration: none;
+    justify-content: space-between;
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 700;
 }
 
-.navbar li a {
-    color: #F78F3F;
+.navbar ul li a {
+    font-size: 4vh;
     position: relative;
     text-decoration: none;
-    font-size: 2.5vh;
+    color: rgb(145, 1, 1);
 }
 
+.div-opacity {
+    background: rgb(0, 0, 0);
+    opacity: 0.6;
+    width: 100%;
+    height: 100vh !important;
+}
 
-.a-animation::after {
+.logo {
+    width: 35%;
+}
+
+.nav-link{
+    color: rgb(145, 1, 1);
+    transition: .6s;
+}
+
+.navbar-animation::after {
     content: "";
     position: absolute;
     bottom: -5px;
     left: 0;
     width: 0%;
-    height: 2px;
-    background-color: #F78F3F;
+    height: 3px;
+    background-color: rgb(145, 1, 1);
     border-radius: 4px;
-    transition: .4s ease-in-out;
+    transition: .5 ease-in-out;
 }
 
-.a-animation:hover::after {
+.navbar-animation:hover::after {
     width: 100%;
-}
-
-.text-logo a {
-    color: #F78F3F;
-    font-size: 6vh;
-    list-style: none;
-    text-decoration: none;
 }
