--- a/site/public/style/style.css
+++ b/site/public/style/style.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Marvel&display=swap');
 
-* {
-    margin: 0;
-}
-
 html {
     scroll-behavior: smooth;
     overflow-x: hidden;
@@ -11,67 +7,90 @@ html {
 
 body {
     font-family: 'Marvel', sans-serif;
+    background-repeat: repeat;
+    padding: 0;
+    margin: 0;
     background: url(../assets/img/backgrounds/marvelBackground-1.svg);
 }
 
-.navbar {
+#navbar {
     position: relative;
     top: 0;
     display: flex;
     justify-content: space-between;
     width: 100%;
-    
+    background-color: #E23636;
+    padding: 1% 2% 1% 1%;
 }
 
-nav{
-    padding: 2vh;
+#logo {
+    font-size: 6vh;
+    color: #F78F3F;
 }
 
-.navbar ul{
+#navbar ul {
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 50px;
+    padding: 0 3% 0 0;
     list-style: none;
-    justify-content: space-between;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 600;
 }
 
-.navbar ul li a {
-    font-size: 4vh;
+#navbar ul li a {
     position: relative;
     text-decoration: none;
-    color: rgb(145, 1, 1);
+    color: #F78F3F;
+    font-size: 2.5vh;
+}
+
+.nav-link {
+    color: white;
+    transition: .4s;
+}
+
+.link-animation::after {
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 0%;
+    height: 2px;
+    background-color: #F78F3F;
+    border-radius: 4px;
+    transition: .4s ease-in-out;
+}
+
+.link-animation:hover::after {
+    width: 100%;
+}
+
+
+.main-index {
+    display: flex;
+    position: relative;
+}
+
+.index {
+    z-index: -1;
+    display: flex;
+    width: 5%;
+    margin-left: 95%;
+    justify-content: flex-end;
+    height: 100vh;
+}
+
+.vinheta-video {
+    width: 100%;
+    box-shadow: inset 100px 100px 100px rgba(0,0,0,1);
+    pointer-events: none;
+    z-index: 1;
 }
 
 .div-opacity {
     background: rgb(0, 0, 0);
     opacity: 0.6;
     width: 100%;
-    height: 100vh !important;
-}
-
-.logo {
-    width: 35%;
-}
-
-.nav-link{
-    color: rgb(145, 1, 1);
-    transition: .6s;
-}
-
-.navbar-animation::after {
-    content: "";
-    position: absolute;
-    bottom: -5px;
-    left: 0;
-    width: 0%;
-    height: 3px;
-    background-color: rgb(145, 1, 1);
-    border-radius: 4px;
-    transition: .5 ease-in-out;
-}
-
-.navbar-animation:hover::after {
-    width: 100%;
+    height: auto !important;
 }
