Icons de personagens adicionados

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -8,6 +8,7 @@
 }
 
 ::-webkit-scrollbar-thumb{
+    border: 1px solid #F78F3F;
     background-color: #E23636;
     border-radius: 50px;
 }
@@ -41,6 +42,10 @@ body {
 #logo {
     font-size: 6vh;
     color: #F78F3F;
+}
+
+#logo img {
+    width: 5%;
 }
 
 #navbar ul {
