--- a/public/style/style.css
+++ b/public/style/style.css
@@ -13,7 +13,6 @@
     border-radius: 50px;
 }
 
-
 html {
     scroll-behavior: smooth;
     overflow-x: hidden;
@@ -29,12 +28,12 @@ body {
 }
 
 #navbar {
-    height: 6vh;
-    width: 100%;
     position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 6.5vh;
+    width: 100%;
     padding: 1% 2% 1% 1%;
     top: 0;
     background-color: #E23636;
@@ -46,7 +45,7 @@ body {
 }
 
 #logo img {
-    width: 4%;
+    width: 5vh;
 }
 
 #navbar ul {
@@ -64,6 +63,11 @@ body {
     text-decoration: none;
     color: #F78F3F;
     font-size: 2.5vh;
+}
+
+#iconeperso{
+    width: 8vh;
+    border: 2px solid #F78F3F;
 }
 
 .nav-link {
@@ -123,9 +127,9 @@ body {
     display: flex;
     position: relative;
     bottom: 0;
-    width: 99.9%;
     z-index: -1000;
     background-size: cover;
+    height: 90vh;   
 }
 
 .texto-index {
@@ -143,15 +147,13 @@ body {
 }
 
 
-.container .selectsPerso {
+.container {
     display: flex;
-    gap: 30px;
-    width: auto;
+
 }
 
 #selectPersonagem {
-    width: 50%;
-    font-size: 10px;
+    width: 100%;
 }
 
 .selectsPerso select {
@@ -161,17 +163,17 @@ body {
     cursor: pointer;
 }
 
-.btnl {
+.btn {
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid #E23636;
     cursor: pointer;
-    font-size: 10px;
-    width: 30%;
     color: #F78F3F;
+    font-size: 2.5vh;
     border-radius: 5px;
     transition: .5s;
+    padding: 2px 5px 2px 5px;
 }
 
 #divButton {
@@ -181,24 +183,13 @@ body {
     align-items: center;
 }
 
-.btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #E23636;
-    cursor: pointer;
-    width: 30%;
-    color: #F78F3F;
-    border-radius: 5px;
-    transition: .5s;
-}
-
 .containerCadastro {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    padding: 4%;
+    font-size: 3vh;
 }
 
 .titulo-pages {
@@ -210,11 +201,10 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
     background-color: rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(2px);
-    width: 50%;
-    padding: 2%;
+    padding: 3%;
 }
 
 .texto {
@@ -226,8 +216,7 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap: 15px;
-    width: 50%;
+    gap: 10px;
     transition: .5s;
 }
 
@@ -238,19 +227,20 @@ label {
 
 .inputs {
     display: flex;
+    padding: 0;
+    margin: 0;
     flex-direction: row;
-    width: 100%;
-    gap: 9%;
+    background-color: aliceblue;
+    width: 98%;
 }
 
 .inputs input {
-    width: 95%;
+    width: 100%;
 }
 
 .formCadastro input {
     border: 1px solid #F78F3F;
     border-radius: 5px;
-    padding: 2px;
     color: #F78F3F;
 }
 
@@ -270,11 +260,6 @@ label {
     align-items: center;
 }
 
-#iconeperso{
-    position: relative;
-    margin-left: 90%;
-    width: 20%;
-}
 
 #divimagem img{
     width: 30px;
