Inserindo dados do Quiz no Banco de Dados

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -39,12 +39,12 @@ body {
     width: 100%;
     padding: 1% 2% 1% 1%;
     top: 0;
-    background-color: #E23636;
+    background-color: rgb(226, 54, 54);
 }
 
 #logo {
     font-size: 6vh;
-    color: #F78F3F;
+    color: rgb(247, 143, 63);
 }
 
 #logo img {
@@ -70,9 +70,9 @@ body {
 
 #iconeperso{
     width: 8vh;
-    background-color:white;
     border-radius:50%;
-    border: 3px solid #F78F3F;
+    border: 2px solid #F78F3F;
+    padding: 2%;
 }
 
 .nav-link {
@@ -176,8 +176,9 @@ body {
     align-items: center;
     border: 1px solid #E23636;
     cursor: pointer;
+    width: 50%;
     color: #F78F3F;
-    font-size: 2.5vh;
+    font-size: 2.2vh;
     border-radius: 5px;
     transition: .5s;
     padding: 2px 5px 2px 5px;
@@ -266,9 +267,11 @@ label {
 .quiz{
     position: absolute;
     display: flex;
+    align-items: center;
     justify-content: center;
     flex-direction: column;
     gap: 15px;
+    width: 20vw;
     background-color: rgba(0, 0, 0, 0.6);
     padding: 5%;
 }
@@ -279,28 +282,57 @@ label {
     position: relative;
 }
 
-#nomePersonagem {
+#nome_perso {
     font-size: 4vh;
+}
+
+.inputQuiz{
+    display: flex;
+    flex-direction: row;
 }
 
 /*Inicial de Dash, Quiz e Resumo de personagem*/
 #containerPerso{
     width: 100vw;
+    height: 100vh;
+    height: auto;
     position: relative;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     background-color: rgba(0, 0, 0, 0.2);
     backdrop-filter:blur(4px);
 }
 
 .tituloPersonagem {
-    font-size: 6vh;
+    font-size: 5vh;
+}
+
+.textPersonagem{
+    text-align: justify;
+    font-size: 2.5vh;
+    height: 77.5vh;
+    padding: 2%;
 }
 
 .textsPerso {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
+    flex-direction: column;
+    width: 40%;
+}
+
+.textsPerso1 {
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    flex-direction: column;
+    width: 20%;
+    height: 50vh;
+}
+
+#imgPerso {
+    width: auto;
+}
+
+.imagens{
+    width: 59vh;
 }
