--- a/public/style/style.css
+++ b/public/style/style.css
@@ -69,10 +69,14 @@ body {
 }
 
 #iconeperso{
-    width: 8vh;
+    width: 3vw;
     border-radius:50%;
     border: 2px solid #F78F3F;
     padding: 2%;
+}
+
+#iconeperso img {
+    width: 2vw;
 }
 
 .nav-link {
@@ -272,6 +276,7 @@ label {
     flex-direction: column;
     gap: 15px;
     width: 20vw;
+    border: 1px solid;
     background-color: rgba(0, 0, 0, 0.6);
     padding: 5%;
 }
@@ -335,4 +340,13 @@ label {
 
 .imagens{
     width: 59vh;
+}
+
+#inputs_quiz {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    gap: 25px;
 }
