--- a/public/style/style.css
+++ b/public/style/style.css
@@ -347,11 +347,11 @@ label {
 }
 
 #imgPerso {
-    width: 10vh;
+    width: 50vw;
 }
 
 .imagens{
-    width: 59vh;
+    width: 20vw;
 }
 
 #inputs_quiz {
