--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Marvel&display=swap');
 
 /*Estilos Universais*/
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 10px;
     background-color: #F78F3F;
 }
 
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
     background-color: #ff8222;
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
     border: 1px solid #F78F3F;
     background-color: #E23636;
     border-radius: 50px;
@@ -47,7 +47,7 @@ body {
 
 #logo {
     font-size: 6vh;
-    color: rgb(247, 143, 63);
+    color: rgb(255, 255, 255);
 }
 
 #logo img {
@@ -67,13 +67,13 @@ body {
 #navbar ul li a {
     position: relative;
     text-decoration: none;
-    color: #F78F3F;
+    color: #FFFFFF;
     font-size: 2.5vh;
 }
 
-#iconeperso{
+#iconeperso {
     width: 3vw;
-    border-radius:50%;
+    border-radius: 50%;
     border: 2px solid #F78F3F;
     padding: 2%;
 }
@@ -113,11 +113,53 @@ body {
 
 }
 
+.treme {
+    animation: treme 0.1s;
+    animation-iteration-count: 3;
+}
+
+@keyframes treme {
+    0% {
+        margin-left: 0;
+    }
+
+    25% {
+        margin-left: 5px;
+    }
+
+    50% {
+        margin-left: 0;
+    }
+
+    75% {
+        margin-left: -5px;
+    }
+
+    100% {
+        margin-left: 0;
+    }
+}
+
 /*Landing Page*/
-.main-objetivo, .main-sobre {
+.titulo {
+    width: 100vw;
     display: flex;
-    background-color: #E23636;
-    position: absolute;
+    justify-content: center;
+    padding-top: 5%;
+}
+
+.container-objetivo,
+.container-sobre {
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur (10px);
+    border-bottom: 1px solid #FFFFFF;
+
+}
+
+.main-objetivo,
+.main-sobre {
+    width: 100vw;
 }
 
 .index {
@@ -153,7 +195,7 @@ body {
     bottom: 0;
     z-index: -1000;
     background-size: cover;
-    height: 90vh;   
+    height: 90vh;
 }
 
 .texto-index {
@@ -161,6 +203,37 @@ body {
     position: absolute;
     font-size: 40px;
 }
+
+.saibaMais {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    font-size: 5vh;
+    color: #FFFFFF;
+    padding: 5%;
+}
+
+.noticias{
+    text-align: justify;
+
+}
+
+.TituloSaiba{
+    color:#F78F3F
+}
+
+.saibaMais .bottao{
+    width: 10%;
+    border-radius: 4px;
+    border: none;
+    background-color: #F78F3F;
+    margin-left: 90%;
+    cursor: pointer;
+    transition: .5s;
+}
+
+
+/*dfghjkl*/
 
 .personagemImg {
     width: 30vh;
@@ -208,8 +281,9 @@ body {
     font-size: 3vh;
 }
 
-.titulo-pages {
-    font-size: 5vh;
+.titulo-main {
+    font-size: 8vh;
+    justify-content: center;
 }
 
 .containerItens {
@@ -275,12 +349,12 @@ label {
     align-items: center;
 }
 
-#divimagem img{
+#divimagem img {
     width: 30px;
 }
 
 /*Inicio do Quiz*/
-.quiz{
+.quiz {
     position: absolute;
     display: flex;
     align-items: center;
@@ -293,7 +367,7 @@ label {
     padding: 5%;
 }
 
-.container .telaquiz{
+.container .telaquiz {
     width: 100vh;
     height: 89vh;
     position: relative;
@@ -303,19 +377,19 @@ label {
     font-size: 4vh;
 }
 
-.inputQuiz{
+.inputQuiz {
     display: flex;
     flex-direction: row;
 }
 
 /*Inicial de Dash, Quiz e Resumo de personagem*/
-#containerPerso{
+#containerPerso {
     width: 100vw;
     height: 90vh;
     position: relative;
     display: flex;
     background-color: rgba(0, 0, 0, 0.2);
-    backdrop-filter:blur(4px);
+    backdrop-filter: blur(4px);
     padding: 2% 0 0 0;
 }
 
@@ -323,7 +397,7 @@ label {
     font-size: 5vh;
 }
 
-.textPersonagem{
+.textPersonagem {
     text-align: justify;
     font-size: 2.5vh;
     height: 77.5vh;
@@ -351,7 +425,7 @@ label {
     width: 25vw;
 }
 
-.imagens{
+.imagens {
     width: 17vw;
 }
 
